# ClientServerCpp

./: .gitignore  CMakeLists.txt  README.md
client/: Makefile  Makefile.Debug  Makefile.Release  app.pro  compile_flags.txt  datapoint.h  httpmanager.cpp  httpmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  moc_httpmanager.cpp  moc_mainwindow.cpp
client/monitoring-client.app/Contents/: Info.plist
client/monitoring-client.app/Contents/MacOS/: monitoring-client
emulator/: CMakeLists.txt  emulator.cpp
server/: CMakeLists.txt  README.md  docker-compose.yml
server/lib/: CMakeLists.txt  server.cpp  server.h
server/lib/proto/: CMakeLists.txt  metric.proto
server/lib/server/: CMakeLists.txt  server.h
server/lib/service/: CMakeLists.txt  service.cpp  service.h
server/test/: CMakeLists.txt  service_integration_test.cpp
